# os_assistant

./: .gitignore  README.md  Untitled0.ipynb
native_engine/: CMakeLists.txt  README.md  native_engine.cpp
os_assistant/: .env.example  config.py  native_app.py  requirements.txt  test_integration.py  test_model.py
os_assistant/agent/: __init__.py  action_verifier.py  actions.py  browser_tools.py  core.py  event_queue.py  gui_reliability.py  hardware.py  high_speed_monitor.py  host_control.py  live_perception.py  memory.py  memory_store.py  native_engine.py  native_win32.py  proactive_monitor.py  resource_manager.py  safety.py  screen.py  screen_diff.py  self_enrollment.py  self_evolution.py  target_cache.py  testing_harness.py  tts.py  ui_automation.py  vision.py  windows_tools.py  ws_bridge.py
os_assistant/agent/adapters/: __init__.py  input_adapter.py  system_adapter.py  window_adapter.py
os_assistant/agent/skills/: test_skill.py
os_assistant/agent/spine/: __init__.py  executor.py  learner.py  observer.py  orchestrator.py  planner.py
os_assistant/data/memory/: lessons_db.json  memory.json
os_assistant/native/: __init__.py  app.py  styles.py
os_assistant/tests/: test_browser_dom_controller.py  test_fast_perception.py  test_gui_reliability.py  test_memory_and_recovery.py  test_self_evolution_sandbox.py  test_spine_executor_gui_control.py  test_testing_harness.py  test_windows_tools.py
trading_lab/: README.md  __init__.py  broker.py  engine.py  models.py  order_gate.py  paper.py  risk.py  strategy.py
trading_lab/tests/: test_trading_lab.py
(+1 files in other folders)
